// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput calls onChange when input value changes 1`] = `
<div>
  <div>
    <label
      class="test-class form-label"
      for="test-input"
    >
      Test Label
    </label>
    <input
      class="form-control"
      id="test-input"
      placeholder="Enter text"
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;

exports[`TextInput displays error message when errorMessage is provided 1`] = `
<div>
  <div>
    <label
      class="test-class form-label"
      for="test-input"
    >
      Test Label
    </label>
    <input
      class="form-control is-invalid"
      id="test-input"
      placeholder="Enter text"
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    >
      Error occurred
    </div>
  </div>
</div>
`;

exports[`TextInput renders component correctly 1`] = `
<div>
  <div>
    <label
      class="test-class form-label"
      for="test-input"
    >
      Test Label
    </label>
    <input
      class="form-control"
      id="test-input"
      placeholder="Enter text"
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;

exports[`TextInput renders input with label 1`] = `
<div>
  <div>
    <label
      class="test-class form-label"
      for="test-input"
    >
      Test Label
    </label>
    <input
      class="form-control"
      id="test-input"
      placeholder="Enter text"
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;

exports[`TextInput renders required attribute when required is true 1`] = `
<div>
  <div>
    <label
      class="test-class form-label"
      for="test-input"
    >
      Test Label
    </label>
    <input
      class="form-control"
      id="test-input"
      placeholder="Enter text"
      required=""
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;
